--- a/barbell-class.Rmd
+++ b/barbell-class.Rmd
@@ -12,6 +12,9 @@ library(ggplot2)
 library(data.table)
 ```
 
+### Summary 
+This project aims to predict quality of barbell lifts using data from a fitness tracker. In this study, we analyzed various movements from the fitness trackers using random forests to determine correctness of the exercise. Data for this project can be found her: http://groupware.les.inf.puc-rio.br/har. 
+
 ### Data
 First, we looked at data quality. In particular we deemed columns with fewer than 80% valid entries as unreliable. Using "#DIV/0!", blank entries and "NA" as invalid entries, sixty out of one-hundred-sixty columns contained greater than 80% valid entries. These columns were used in the analysis.  Also, we want this model to be generalized, so we will remove username as a predictor. 
 
@@ -72,6 +75,7 @@ validation = validation[,-dim(validation)[2]]
 test_class = testing$classe
 testing = testing[,-dim(testing)[2]]
 ```
+### Methodology
 
 We used cross validation in the analysis, splitting training data into two datasets, train=`r dim(training)[1]` rows and validation=`r dim(validation)[1]` rows. We used the cross validation set to predict the error of the test set and in generalized use beyond this specific data set. 
 
@@ -99,6 +103,8 @@ result_matrix = confusionMatrix(predict_validation, validation_class)
 error_rate = 1 - result_matrix$overall[1]
 
 ```
+
+### Results
 
 Applying this model to the validtion set shows an error rate of `r error_rate` We predict the test set will be similar. Here is the confusion matrix of the results
 
@@ -129,7 +135,8 @@ predictions = predict(fit2, validation)
 results = confusionMatrix(predictions, validation_class)
 results
 ```
-With this new model, we've lowered our error rate to `r 1 - results$overall[1]`. We predict similar error rates for the test data. 
+### Conclusion
+With this new model, we've lowered our error rate to `r 1 - results$overall[1]`. We predict similar error rates for the test data. After submitting the test results, we acheived 0% errors and have concluded that this model gives a good prediction 
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
   test_results = predict(fit2, testing)
